plang/testing/logs/false-incorrect/48/program48.p.p
v3 :- ((uZQWU (AF) u74w, s7cwG tAsHS A b (q3GGr); d1et)), (((yEry)); (pbyZ (bw PGz (IbJtj) hP dUUS5) (Z); ym (MVnA) lFnY)).

r soxf (bUieq (Bxk) (y aRHFJ (O) (HxAw)) (T) tL) (e) (j dRTF (WWH93)).
mTi (UIc) (Z1t) HP YN6l :- uj3 KRkN wQEe (Lp), (jRck (LAAos) o6Z); g b6Yd Xu5; ic (v44 VZrp); jBbG8 mBN; mOG (Bac) AlI (Z); ((y9p (L00GW) (Pv))); yxdc5 (t3); ((iDT (gb) (zTRef fYOJt X8) (xNu7 up))), nv (pxTf y Fa7v (T) (SEs)) (xbElH wj6 (Vr)) qPnt; zd (ttGzi (ia3 (sv XQG) (vEhbU (rnii L (J9A) (NCJg5) siCX) (YM) (ds (K01RK) vvK m3Ej (ENh8z)))) (qjDr Iiua)) (W) (f2nH) hhmW, (m5YXB (LYrcT)), (yCH (lcm sV OH (r j3GE (AO) (x0 (w (SmP) Q (haO) cx) SIHk xF4bw))) XYZy PI; azUU k kQf (MZ0) (zJK), (oiZZg G4Xv SPq)).

fPI (UGv5) nnl8R (LH) q2w.

? (((rjbI6 SsO WNwM8 ySMb, jBn (Z) (q ShNa v7) j)), eQ9b (O)).
